# ENKA-S

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  Doxyfile  LICENSE  README  README.md
app/: CMakeLists.txt
app/resources/: main_window.ui  resources.qrc  simulation_window.ui
app/resources/forms/diagnostics_panel/: diagnostics_tab.ui
app/resources/forms/diagnostics_tab/: diagnostics_tab.ui
app/resources/forms/load_simulation_tab/: load_simulation_tab.ui
app/resources/forms/main_window/: main_window.ui
app/resources/forms/new_simulation_tab/: new_simulation_tab.ui
app/resources/forms/simulation_window/: render_settings_widget.ui  simulation_window.ui
app/resources/icons/: icon.icns
app/resources/shaders/: cross.frag  cross.vert  particle.frag  particle.vert
app/resources/shortcuts/: ENKA-S.desktop
app/src/: app_initializer.cpp  app_initializer.h  app_logic.cpp  app_logic.h  application.cpp  application.h  composition_root.cpp  composition_root.h  main.cpp  main_window.cpp  main_window.h
app/src/core/: blocking_queue.h  data_ptr.h  data_storage_logic.cpp  data_storage_logic.h  file_check_logic.cpp  file_check_logic.h  file_constants.h  file_names.h  file_parse_logic.cpp  file_parse_logic.h  file_types.h  generator_factory.cpp  generator_factory.h  settings.cpp  settings.h  simulator_factory.cpp  simulator_factory.h  snapshot.h  system_parse_logic.cpp  system_parse_logic.h  system_ring_buffer.cpp  system_ring_buffer.h
app/src/core/charts/: chart_extractors.h  downsampling.h
app/src/core/concurrency/: concurrent_runner.h  i_task_runner.h  run.h
app/src/core/dataflow/: blocking_queue.h  debug_info.h  latest_value_slot.h  memory_pool.h  snapshot.h  system_memory_pool.cpp  system_memory_pool.h  system_ring_buffer.cpp  system_ring_buffer.h
app/src/core/factories/: generator_factory.cpp  generator_factory.h  simulator_factory.cpp  simulator_factory.h
app/src/core/files/: data_storage_logic.cpp  data_storage_logic.h  file_constants.h  file_parse_logic.cpp  file_parse_logic.h  file_parser.cpp  file_parser.h  i_file_parse_logic.h  system_snapshot_stream.cpp  system_snapshot_stream.h
app/src/core/settings/: generation_method.h  setting_key.h  settings.cpp  settings.h  simulation_method.h
app/src/factories/: i_simulation_player_factory.h  i_simulation_runner_factory.h  simulation_player_factory.h  simulation_runner_factory.h
app/src/logging/: logs_tab.cpp  qt_log_sink.cpp  qt_log_sink.h
app/src/managers/: i_simulation_player.h  i_simulation_runner.h  simulation_player.cpp  simulation_player.h  simulation_runner.cpp  simulation_runner.h
app/src/panels/diagnostics/: line_chart_widget.h
app/src/panels/load_simulation/: file_check_icon.h  load_simulation_tab.h
app/src/panels/new_simulation/: data_settings.h  fancy_double_spin_box.h  new_simulation_tab.h  settings.h
app/src/presenters/: i_load_simulation_presenter.h  live_simulation_window_presenter.cpp  live_simulation_window_presenter.h  load_simulation_presenter.cpp  load_simulation_presenter.h  main_window_presenter.cpp  main_window_presenter.h  new_simulation_presenter.cpp  new_simulation_presenter.h  replay_simulation_window_presenter.cpp  replay_simulation_window_presenter.h  simulation_window_presenter.cpp  simulation_window_presenter.h
app/src/presenters/load_simulation/: load_simulation_presenter.cpp  load_simulation_presenter.h
app/src/rendering/: camera.h  is_darkmode.h  particle_renderer.cpp  particle_renderer.h  render_settings.h  render_settings_widget.cpp  render_settings_widget.h  simulation_window.cpp  simulation_window.h  system_preview.cpp  system_preview.h
app/src/views/logs_tab/: logs_tab.cpp  (+1 more)
app/src/widgets/: debug_info_widget.cpp  debug_info_widget.h  diagnostics_widget.cpp  diagnostics_widget.h  fancy_double_spin_box.cpp  fancy_double_spin_box.h  file_check_icon.cpp  file_check_icon.h  line_chart_widget.h  playback_bar.cpp  playback_bar.h  render_settings_widget.cpp  render_settings_widget.h  system_preview.cpp  system_preview.h
app/src/workers/: csv_file_writer.h  data_saver.cpp  data_saver.h  data_storage_worker.cpp  data_storage_worker.h  file_check_worker.cpp  file_check_worker.h  file_checker.cpp  file_checker.h  file_parse_worker.cpp  file_parse_worker.h  queue_storage_worker.h  simulation_manager.cpp  simulation_manager.h  simulation_player.cpp  simulation_player.h  simulation_runner.cpp  simulation_runner.h  simulation_worker.cpp  simulation_worker.h  system_buffer_worker.cpp  system_buffer_worker.h
core/: CMakeLists.txt
core/src/generation/: generation_factory.cpp
core/src/math/: bivector3d.cpp  rotor3d.cpp  vector3d.cpp
core/src/simulation/: simulation_factory.cpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  main.cpp
tests/app/mocks/: fake_synchronous_task_runner.h  mock_file_parser.h  mock_load_simulation_presenter.h  mock_load_simulation_view.h  mock_main_window_view.h  mock_new_simulation_presenter.h  mock_new_simulation_view.h  mock_simulation_player.h  mock_simulation_player_factory.h  mock_simulation_runner.h  mock_simulation_runner_factory.h  mock_task_runner.h
tests/app/presenters/: test_load_simulation_presenter.cpp  test_main_window_presenter.cpp  test_new_simulation_presenter.cpp
tests/core/: CMakeLists.txt
tests/core/generation/: normal_sphere_generator_test.cpp  spiral_galaxy_generator_test.cpp  stream_generator_test.cpp  uniform_cube_generator_test.cpp  uniform_sphere_generator_test.cpp
tests/core/physics/: helpers_tests.cpp
tests/core/simulation/: all_simulators_compliance_test.cpp  common_simulator_tests.h
tests/src/generation/: collision_model_generator_test.cpp  normal_sphere_generator_test.cpp  plummer_sphere_generator_test.cpp  spiral_galaxy_generator_test.cpp  stream_generator_test.cpp  uniform_cube_generator_test.cpp  uniform_sphere_generator_test.cpp
tests/src/math/: bivector3d_tests.cpp  helpers_test.cpp  rotor3d_tests.cpp  vector3d_tests.cpp
tests/src/physics/: helpers_tests.cpp
tests/src/simulation/: all_simulators_compliance_test.cpp  common_simulator_tests.h
(+212 files in other folders)
